--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Agenda de contatos</title>
+    <link rel="icon" href="imagens/favicon.png">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <img src="imagens/agenda.png">
     <h1>Agenda de Contatos</h1>
-    <a href="">Acessar</a>
+    <a href="main" class="btnacessar">Acessar</a>
 
 
 
