--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <title>Agenda de contatos</title>
     <link rel="icon" href="imagens/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
     <img src="imagens/agenda.png">
     <h1>Agenda de Contatos</h1>
     <a href="main" class="btnacessar">Acessar</a>
-
-
 
 </body>
 </html>
